questao 1 e 2 autenticacao e cadastro

--- a/usuarios-jsf/src/main/webapp/index.xhtml
+++ b/usuarios-jsf/src/main/webapp/index.xhtml
@@ -1,14 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-<h:head>
-	<title>Usuários</title>
-</h:head>
-<h:body>
-	<h3>CRUD - Usuários</h3>
-
-</h:body>
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Pagina Inicial</title>
+</head>
+<body>
+    Trabalho Java para web<br /><br />
+    <a href="autenticar.xhtml">Autenticar Usuário</a><br/>
+    <a href="cadastrarUsuario.xhtml">Cadastrar Usuário</a><br/>
+    
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+        
+    <a href="usuarioServlet">Listar Usuarios</a><br/>
+    <a href="requestServlet">Request Servlet</a><br/>
+    <a href="sessionServlet">Session Servlet</a><br/>
+</body>
 </html>
